# generate_cv

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/app_cv/: admin.py  apps.py  forms.py  models.py
backend/app_cv/migrations/: 0001_initial.py  0002_auto_20211025_0459.py  0003_auto_20211026_1321.py  0004_auto_20211026_1844.py  0005_auto_20211026_2007.py  0006_auto_20211026_2021.py  0007_auto_20211026_2146.py
backend/core/: settings.py  urls.py
backend/templates/: base.html  form.html  index.html
backend/templates/forms/: edu_form.html  form.html  work_form.html
frontend/: .eslintrc.js  nuxt.config.js  package-lock.json  package.json
frontend/components/: Navbar.vue
frontend/layouts/: default.vue
frontend/pages/: create.vue  index.vue
frontend/pages/cv/: create.vue
frontend/static/css/: main.css
frontend/store/: index.js
